# udt4py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: wheels.yml
src/: udt4py.pyx
tests/: epoll.py  socket.py  udt_socket.py
