[metadata]
name = udt4py
version = 1.2
description = libudt4 Python wrapper written with Cython
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/vmarkovtsev/udt4py
author = Samsung Electronics Co.,Ltd.
author_email = v.markovtsev@samsung.com,
license = Simplified BSD
classifiers =
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.2',
    'Programming Language :: Python :: 3.3',
    'Topic :: Software Development :: Libraries',
    'Topic :: System :: Networking',
keywords = 'udt', 'pyudt', 'udt4', 'udt4py'

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    bz2file
python_requires = >=2.7

[aliases]
test=pytest
